2011-07-21  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/Makefile.am (gnotime_SOURCES): Removed file-io.c from the
	build (support for old config file formats)

	* src/main.c (read_config): Remove support for old config file formats

2011-07-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/app.c (app_new): Use a plain GtkWindow instead of GnomeApp.

	* src/menus.c (menus_create): Migrate from GnomeUIInfo to
	GtkUIManager for the creation of the main menu.

2011-07-19  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/menucmd.c (menu_toggle_timer): Do not change project state
	if it already matches the menu item state. Avoid infinite loop
	when starting/stoping project timer.

	* src/toolbar.c (toolbar_toggle_timer): added function to handle
	toolbar button differently from the menu toggle timer menu item.

2011-07-11  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/status-icon.c (status_icon_menuitem_visibility): removed
	direct reference to GTK struct data members in order to make it
	buildable with the -DGSEAL_ENABLE option.

	* src/active-dialog.c, glade/active.glade: Use GtkComboBox instead
	of GtkOptionMenu in the start project dialog.

2011-07-10  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/toolbar.c, src/status-icon.c, src/prefs.c, src/notes-area.c,
	src/menus.c, src/menucmd.c, src/main.c, src/gconf-io.c, src/app.c:
	Removed direct 	references to private GTK struct members in order
	to make it buildable with the -DGSEAL_ENABLE option.

2011-03-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/Makefile.am (gnotime_LDADD): Added -lX11, fixing build with
	binutils-gold.

2010-11-27  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (backups_exist): Added function to check if there are
	backup files in the data directory.
	(try_restoring_backup): check if there are backups in the data dir
	before offering to load a backup file.

2010-11-25  Goedson Teixeira Paixao  <goedson@debian.org>
